--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "tailwind:dev": "npx @tailwindcss/cli -i party_app/static/src/input.css -o party_app/static/css/output.css --watch",
     "tailwind:build": "npx @tailwindcss/cli -i party_app/static/src/input.css -o party_app/static/css/output.css --mimify"
+  },
+  "dependencies": {
+    "@tailwindcss/language-server": "^0.14.23"
   }
 }
